# ProjetoCG

./: README.md
CG/: Bmp.cpp  CG  CG.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  Sphere.cpp  Sphere.h  cmake_install.cmake  main.cpp  projeto.cpp
